--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <option value="5">Mana Regen</option>
                 <option value="6">Spread</option>
                 <option value="7">Speed</option>
+                <option value="8">Length</option>
               </select>
             </div>
             <div class="row">
